# freeswitch-esl

./: Cargo.toml  README.md
examples/: event_listener_typed.rs  untyped.rs
src/: codec.rs  lib.rs  types.rs
