[package]
name = "fs_esl_codec"
version = "0.0.1"
edition = "2021"
authors = ["semubico@proot.tech"]

[lib]
crate-type = ["staticlib", "rlib"] 
bench = false

[[example]]
name = "untyped"
path = "examples/untyped.rs"

[[example]]
name = "typed"
path = "examples/typed.rs"

#[features]
#types = [ "dep:serde_json" ]

[dependencies]
compact_str = { version = "^0.8.0", features = ["serde", "bytes"] }
serde = { version = "^1.0.210", features = ["derive"] }
#serde_json = { version = "^1.0.128", optional = true }
thiserror = "^1.0.64"
tokio-util = { version = "0.7.12", features = ["codec"] }

[dev-dependencies]
anyhow = "1.0.89"
tokio = { version = "1.0", features = ["full"]}
futures = "^0.3.30"
serde_json = { version = "^1.0.128" }

